--- a/Master.tex
+++ b/Master.tex
@@ -14,6 +14,9 @@
 \usepackage{caption}
 \captionsetup{justification=justified,singlelinecheck=false}
 \newcommand{\figref}[1]{\figurename~\ref{#1}}
+\usepackage{tikz}
+\usetikzlibrary{topaths,calc}
+\usetikzlibrary{positioning}
 
 \makeatletter
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Textclass specific LaTeX commands.
