started work on merging hypergraphs

--- a/Learning.tex
+++ b/Learning.tex
@@ -3,7 +3,7 @@
 
 <\texttt{TODO:} Explain scientific learning, how to learn scientifically? >
 \section{Strategy}
-
+    \subfile{Learning/Strategy}
 \section{Algorithm}
     \subfile{Learning/Algorithm}
 
