--- a/Master.tex
+++ b/Master.tex
@@ -12,6 +12,17 @@
 \usepackage{graphicx}
 \usepackage{paralist}
 \usepackage{caption}
+\usepackage{hyperref}
+\usepackage[ampersand]{easylist}
+
+\hypersetup{
+    colorlinks,
+    citecolor=black,
+    filecolor=black,
+    linkcolor=black,
+    urlcolor=black
+}
+
 \captionsetup{justification=justified,singlelinecheck=false}
 \newcommand{\figref}[1]{\figurename~\ref{#1}}
 
