--- a/Master.tex
+++ b/Master.tex
@@ -14,6 +14,7 @@
 \usepackage{caption}
 \usepackage{hyperref}
 \usepackage[ampersand]{easylist}
+\usepackage{subcaption}
 
 \hypersetup{
     colorlinks,
@@ -91,7 +92,7 @@
 \chapter{Results}
 
 \chapter{Discussion}
-
+dis
 \chapter{Conclusion}
 
 \chapter{Future work}
