Added HypothesisConstruction.tex without pessimistic

--- a/Conditional/DifficulitiesLearningConditionEffects.tex
+++ b/Conditional/DifficulitiesLearningConditionEffects.tex
@@ -336,7 +336,7 @@ If we then see that an effect does not occur in the state, the bindings in the p
 
 Because of Theorem \ref{thm:minimum-one-binding} the following invariant holds:
 \begin{equation} \label{eq:binding_invariant}
-\left| \{b  |  b \in B_c \land b \in preconds_{bindings}(A)\} \right|  \ge 1
+\left| \{b  \mid  b \in B_c \land b \in preconds_{bindings}(A)\} \right|  \ge 1
 \end{equation}
 
 
