--- a/NonConditional.tex
+++ b/NonConditional.tex
@@ -11,5 +11,6 @@
     \subfile{NonConditional/Preconditions}
 
 \section{Hypothesis construction}
+	\subfile{NonConditional/HypothesisConstruction}
 
 \end{document}
