--- a/Strategy.tex
+++ b/Strategy.tex
@@ -37,7 +37,7 @@
     Both of these strategies are equally valid approaches to learning.
     However they show two different traits which we will define and analyse.
     \begin{description}
-    \item [{Explorative/Exploitative}] An explorative strategy, like an explorative graph search will prefer to try and test unknown territory in the hopes that it will provide it with a better solution, and only in cases where there is no upside decide not to explore.
+    \item [{Explorative/Exploitative}] An explorative strategy, like an explorative graph search will prefer to try and test unknown territory in the hopes that it will provide it with a better solution, but only in cases where there is no upside decide not to explore.
     An exploitative strategy however will avoid the unexplored and only learn something when necessary otherwise it will use what it has already learned. Much akin to how the dynamic between a Breath-First-Search and a Depth-First-Search works. The advantage of a Explorative strategy is that once it has learned something, it will be very efficient at doing that thing, however for it to get to that point it will spend a long time learning. Opposite an exploitative strategy will be very fast to learn something but it will very likely be an inefficent way.
 
     For instance imagine an agent trying to learn how to sail a ship around an island, in the beginning it can either sail clockwise and counter-clockwise, because it is new and inexperianced it does not know what the outcome of either of these actions will be. Lets assume that the agent was given an task to bring the boat to location $ E $, because it does not no anything, both the clockwise and the counter-clockwise option is equally good to it. If it went with the counter-clockwise option then a strategy based on exploitativity would deem the problem solvable and no longer in need of learning, as the agent can simply sick to counter-clockwise moves around the island until it reaches its destination. However if it used a strategy based explorativity then it demand both options to be tested and thus the agent would do a clockwise afterwards learning that the problem can be easily solved using two clockwise moves instead of six counter-clockwise moves. If however the agent had went clockwise to begin with then it would have been wasting its time learning to move counter-clockwise as it is the inferior solution in this case.
